# stream-utils

./: .gitignore  .prettierignore  Cargo.toml  package.json  pnpm-lock.yaml  turbo.json  vitest.workspace.ts
.github/workflows/: release.yml
crates/shredstream-proxy-client/: Cargo.toml  build.rs
crates/shredstream-proxy-client/proto/: shredstream.proto
crates/shredstream-proxy-client/src/: decode.rs  lib.rs  proto.rs
crates/solana-entry-decoder/: Cargo.toml
crates/solana-entry-decoder/src/: lib.rs
crates/yellowstone-geyser-client/: Cargo.toml  build.rs
crates/yellowstone-geyser-client/proto/: geyser.proto  solana-storage.proto
crates/yellowstone-geyser-client/src/: lib.rs  proto.rs
tooling/eslint/: eslint.config.js  package.json  tsconfig.json
tooling/tsconfig/: base.json  package.json
