[package]
edition = "2021"
name = "shredstream_proxy_client"
version = "0.0.1"

[dependencies]
bincode = "1.3.3"
prost = "0.13.1"
prost-types = "0.13.1"
serde = { version = "1.0.219", features = ["derive"] }
solana-entry = "2.3.4"
thiserror = "2.0.12"
tonic = { version = "0.13.1", features = ["tls-ring", "tls-native-roots", "tls-webpki-roots"] }

[build-dependencies]
protobuf-src = "2.1.1"
tonic-build = "0.13.1"
